syntax = "proto3";

service Avatar {
    rpc Create (AvatarCreateRequest) returns (AvatarCreateResponse);
}

message AvatarCreateRequest {
    int32 userId = 1;
    bytes file = 2;
}

message AvatarCreateResponse {
    enum Status {
        UNKNOWN = 0;
        INVALID_PARAM = -1;
        SUCCESS = 1;
        NOT_FOUND = 2;
        INVALID_TYPE = 3;
    }
    Status status = 1;
    string avatarId = 2;
}
